# ToolsTranslator

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.py  opencode.json  pyproject.toml  pytest.ini  setup.py
.devcontainer/: devcontainer.json
api/: translate_api.py
bk/: __init__.py  __main__.py  config.py  main.py
bk/api/: __init__.py  translate_api.py
bk/core/: __init__.py  autotranslate.py  translate.py
bk/parses/: __init__.py  tjson.py  tts.py  tyaml.py
bk/tools/: __init__.py  config_logging.py  docker_tool.py  libretranslate_service.py  verify_docker_tool.py
bk/utils/: __init__.py  extract_info_file.py  searches.py
docs/: API_REFERENCE.md  GENERATE_DOCS.md  HOWTO_DOCKER.md  INSTALL_DEV.md  USAGE.md  architecture.md  autotranslate.md  cli.md  configuration.md  development.md  extensibility.md  installation.md  library.md  overview.md  usage.md
examples/: CLI.md  DEVELOP.md  auto_translate_file.py  autotranslate_example.py  basic_usage.py  batch_translation.py  change_language.py  check_service.py  cli_examples.sh  custom_config.py  error_handling.py  fastapi_example.py  flask_example.py  missing_keys.py  simple_translator.py  static_files_only.py
examples/locales/: es.json
tests/: test_autotranslate.py  test_cache_and_dynamic.py  test_concurrency.py  test_deep_ops.py  test_error_handling.py  test_fileinfo.py  test_filesystem.py  test_getattr_keys.py  test_http_client.py  test_integration.py  test_io_handlers.py  test_language_switch.py  test_missing_keys.py  test_server.http  test_translator_init.py
tests/assets/: es.json
tests/toolstranslator/: test_cli.py  test_translator.py
tests/translator/utils/: test_extract_info_file.py
tools/: libretranslate_service.py  verify_docker_tool.py
tools/parsers/: json_parse.py
toolstranslator/: __init__.py  __main__.py  exceptions.py
toolstranslator/adapters/: http_client.py  libretranslate.py
toolstranslator/cli/: __init__.py  app.py
toolstranslator/core/: translator.py
toolstranslator/docker_manager/: manager.py
toolstranslator/file_handlers/: json_handler.py  yaml_handler.py
translate/: __init__.py  adapter.py  autotranslate.py  exceptions.py  io_handlers.py
translate/tests/: test_autotranslate.py
translator/: __init__.py  __main__.py  __version.py  __version__.py  cli.py  cli_back.py  cli_backup.py  config.py  config_backup.py  core.py  exceptions.py  main.py
translator/adapters/: __init__.py  base.py  cached.py  fallback.py  http_client.py  libretranslate.py  libretranslate_adapter.py
translator/api/: __init__.py  translate_api.py
translator/cli/: __init__.py  app.py
translator/core/: __init__.py  autotranslate.py  backup.py  manager.py  translate.py  translator.py
translator/docker_manager/: manager.py
translator/handlers/: io_handlers.py  json_handler.py  yaml_handler.py
translator/managers/: docker_manager.py
translator/models/: __init__.py  info_file.py
translator/parses/: __init__.py  i18n_ts.py  json.py  tjson.py  tts.py  tyaml.py
translator/struct_files/: en.json  i18n.ts  ts.json
translator/tools/: __init__.py  config_logging.py  docker_tool.py  libretranslate_service.py  verify_docker_tool.py
translator/tools/structs/: __init__.py  json.py  json_struct.py  yaml.py
translator/utils/: __init__.py  extract_info_file.py  fileinfo.py  searches.py
