[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolstranslator"
version = "0.2.0"
description = "SDK modular para traducción con LibreTranslate y gestión de archivos i18n."
readme = "README.md"
authors = [{ name = "Walter Cun Bustamante", email = "waltercunbustamante@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Internationalization",
]
keywords = ["translate", "i18n", "libretranslate", "sdk"]
dependencies = [
    "typer>=0.21.2",
]

[project.optional-dependencies]
yml = [
  "PyYAML>=6.0.2",
]
server = [
  "typer>=0.12.3",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
]

[project.scripts]
toolstranslator = "toolstranslator.cli:main"

[project.urls]
Homepage = "https://github.com/WalterCun/ToolsTranslator"
Repository = "https://github.com/WalterCun/ToolsTranslator"
"Bug Reports" = "https://github.com/WalterCun/ToolsTranslator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["toolstranslator*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
